Fix layout problem with long application list title

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -182,12 +182,13 @@
   padding: 0 10px 0 0;
   display: inline-block;
   line-height: 100%;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .application-handling__form-list-arrow {
   color: #06526B;
   font-size: 26px;
+  position: absolute;
 }
 
 .application-handling__form-list-link--deleted {
